@@ -1,13 +1,13 @@
 # -*- coding: utf-8 -*-
 # modelines.py - Emacs, Kate and Vim-style modelines support for gedit.
 #
-# Copyright (C) 2005 - Steve Frécinaux
+# Copyright (C) 2005-2006 - Steve Frécinaux
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 2, or (at your option)
 # any later version.
-# 
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
@@ -31,28 +31,28 @@ class ModelinePlugin(gedit.Plugin):
         loaded_id = doc.connect("loaded", apply_modeline, view)
         saved_id  = doc.connect("saved", apply_modeline, view)
         doc.set_data("ModelinePluginHandlerIds", (loaded_id, saved_id))
-    
+
     def disconnect_handlers(self, view):
         doc = view.get_buffer()
         loaded_id, saved_id = doc.get_data("ModelinePluginHandlerIds")
         doc.disconnect(loaded_id)
         doc.disconnect(saved_id)
         doc.set_data("ModelinePluginHandlerIds", None)
-    
+
     def activate(self, window):
-        for view in window.get_views(): 
+        for view in window.get_views():
             self.connect_handlers(view)
             apply_modeline(view.get_buffer(), None, view)
-            
+
         tab_added_id = window.connect("tab_added",
                                       lambda w, t: self.connect_handlers(t.get_view()))
         window.set_data("ModelinePluginHandlerId", tab_added_id)
-    
+
     def deactivate(self, window):
         tab_added_id = window.get_data("ModelinePluginHandlerId")
         window.disconnect(tab_added_id)
         window.set_data("ModelinePluginHandlerId", None)
-        
+
         for view in window.get_views():
             self.disconnect_handlers(view)
 
@@ -96,26 +96,28 @@ def get_modeline_options(doc):
 
     # Search the three last lines for vim- and kate-style modelines
     start = doc.get_end_iter()
-    start.backward_lines(2)    
+    start.backward_lines(2)
     for i in (1, 2, 3):
         end = start.copy()
-        if not end.forward_to_line_end():
-            return options
+        end.forward_to_line_end()
         modeline = doc.get_text(start, end, False)
         options.update(parse_modeline_kate(modeline))
         options.update(parse_modeline_vim(modeline))
         start = end
+        if end.is_end():
+            return options
 
     # Kate reads modelines on the 10 last lines
-    start.backward_lines(9)    
+    start.backward_lines(9)
     for i in (4, 5, 6, 7, 8, 9, 10):
         end = start.copy()
-        if not end.forward_to_line_end():
-            return options
+        end.forward_to_line_end()
         modeline = doc.get_text(start, end, False)
         options.update(parse_modeline_kate(modeline))
         start = end
-    
+        if end.is_end():
+            return options
+
     return options
 
 def parse_modeline_vim(line):
@@ -128,12 +130,12 @@ def parse_modeline_vim(line):
     # Find the modeline
     for i in ('ex:', 'vi:', 'vim:'):
         start = line.find(i)
-        if start != -1:    
+        if start != -1:
             start = start + len(i)
             break
     else:
         return {}
-    
+
     if line[start : start + 2] == "se":
         end = line.find(":", start + 3)
         if end == -1:
@@ -144,11 +146,11 @@ def parse_modeline_vim(line):
             line = line[start + 3 : end]
     else:
         line = line[start :]
-    
+
     # Get every individual directives
     directives = [x for x in re.split(r'[: ]', line) if x != '']
     options = dict();
-    
+
     for directive in directives:
         # Reformat the directive
         if (directive.find("=") != -1):
@@ -159,7 +161,7 @@ def parse_modeline_vim(line):
         else:
             value = True
             name = directive
-        
+
         # Set the options according to the directive
         if name == "et" or name == "expandtab":
             options["use-tabs"] = not value
@@ -182,11 +184,11 @@ def parse_modeline_emacs(line):
     end = line.find("-*-", start)
     if end == -1:
         return {}
-    
+
     # Get every individual directives
     directives = [x for x in [i.strip() for i in line[start : end].split(";")] if x != '']
     options = dict()
-    
+
     for directive in directives:
         name, value = ([i.strip() for i in directive.split(":", 1)] + [None])[0:2]
         if name == "tab-width":
@@ -209,11 +211,11 @@ def parse_modeline_kate(line):
     end = line.rfind(";")
     if end == -1:
         return {}
-    
+
     # Get every individual directives
     directives = [x for x in [i.strip() for i in line[start : end].split(";")] if x != '']
     options = dict()
-    
+
     for directive in directives:
         name, value = ([i.strip() for i in directive.split(None, 1)] + [None])[0:2]
         if name == "tab-width" or name == "indent-width":
@@ -238,7 +240,7 @@ def apply_options(options, view):
         view.set_tabs_width(options["tabs-width"])
     elif old_options.has_key("tabs-width"):
         view.set_tabs_width(gconf_get_int("/apps/gedit-2/preferences/editor/tabs/tabs_size", 8))
-    
+
     if options.has_key("use-tabs"):
         view.set_insert_spaces_instead_of_tabs(not options["use-tabs"])
     elif old_options.has_key("use-tabs"):
@@ -254,7 +256,7 @@ def apply_options(options, view):
         if wrap_mode == "GTK_WRAP_WORD":
             view.set_wrap_mode(gtk.WRAP_WORD)
         else:
-            view.set_wrap_mode(gtk.WRAP_NONE)        
+            view.set_wrap_mode(gtk.WRAP_NONE)
 
     if options.has_key("margin"):
         if options["margin"] > 0:
