@@ -1,3 +1,8 @@
+2006-12-02  Steve Frécinaux  <code@istique.net>
+
+	* plugins/modelines/modelines.py: fix reading modelines from the last
+	line of the document, and remove a few trailing spaces.
+
 2006-12-02  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit-commands-search.c:
